--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 <body>
 <div class="container">
 	<%= render "layouts/header" %>
-	<section class="round">
+	<section id="content">
 		<% flash.each do |key, value| %>
 			<%= content_tag(:div, value, :class => "flash #{key}") %>
 		<% end %>
