--- a/app/views/company_users/new.html.erb
+++ b/app/views/company_users/new.html.erb
@@ -1,16 +1,35 @@
-<h1>New company user</h1>
+<h1>Invite New User</h1>
 <%= form_for @company_user do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<%= f.hidden_field :company_id, {:value => @company.id} %>
-	<div class="field">
-		<%= f.label :email %><br/>
-		<%= f.text_field :email %>
+	<div class="field clearfix">
+		<%= f.label :email %>
+		<div class="input">
+			<%= f.text_field :email %>
+		</div>
 	</div>
-	<div class="field">
-		<%= f.label :is_admin %><br/>
-		<%= f.check_box :is_admin %>
+	<div class="field clearfix">
+		<label>Settings</label>
+		<div class="input">
+			<ul class="inputs-list">
+				<li>
+					<label>
+						<%= f.check_box :is_admin %>
+						<span>User add new users</span>
+					</label>
+					<label>
+						<input type="checkbox">
+						<span>User can create new Paths</span>
+					</label>
+					<label>
+						<input type="checkbox">
+						<span>User can add items to the Store</span>
+					</label>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Submit" %>
+		<%= f.submit "Submit", :class => "btn primary" %>
 	</div>
 <% end %>
