--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,5 @@
 <footer>
-	<nav class="round">
-		<ul>
-			<li><%= link_to "About", about_path %></li>
-			<li><%= link_to "Contact", contact_path %></li>
-			<li><%= link_to "News", news_path %></li>
-		</ul>
-		<p style='font-size:90%;'>Stay hungry, stay foolish.</p>
+	<nav>
+		<p class="quote">Stay hungry, stay foolish.</p>
 	</nav>
 </footer>
