--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,10 +1,104 @@
-<!--(if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-<%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
-<!--(if lt IE 8)>
-<%= stylesheet_link_tag 'blueprint/ie', :media => 'print' %>
-<![endif]-->
-<%= stylesheet_link_tag 'custom', :media => 'screen' %>
+<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-scrollspy.js"></script>
+<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-dropdown.js"></script>
 <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+<style>
+	#content {
+		padding-top: 75px;
+	}
+	
+	/* Footer */
+	footer {
+		text-align: center;
+		margin-top: 100px;
+		margin-left: auto;
+		margin-right: auto;
+	} 
+	footer nav {
+		float: none;
+	}
+	footer ul {
+		list-style-type: none;
+	}
+	footer li {
+		display: inline;
+	}
+	footer .quote{
+		font-size: 12px;
+		font-style: italic;
+	}
+	
+	/* User signup */
+	div.field, div.action {
+		margin-bottom: 10px;
+	} 
+	.field_with_errors {
+		margin-top: 10px;
+		padding: 2px;
+		background-color: red;
+		display: table;
+	} 
+	.field_with_errors label {
+		color: #fff;
+	} 
+	#error_explanation {
+		width: 400px;
+		border: 2px solid red;
+		padding: 7px;
+		padding-bottom: 12px;
+		margin-bottom: 20px;
+		background-color: #f0f0f0;
+	} 
+	#error_explanation h2 {
+		text-align: left;
+		font-weight: bold;
+		padding: 5px 5px 5px 15px;
+		font-size: 12px;
+		margin: -7px;
+		background-color: #c00;
+		color: #fff;
+	} 
+	#error_explanation p {
+		color: #333;
+		margin-bottom: 0;
+		padding: 5px;
+	} 
+	#error_explanation ul li {
+		font-size: 12px;
+		list-style: square;
+	}
+	
+	#dashboard ul {
+		list-style-type: none;
+	}
+	#dashboard h1 {
+		font-size:28px;
+	}
+	#dashboard h2 {
+		font-size:22px;
+	}		
+	#dashboard h3 {
+		font-size:18px;
+	}
+	#dashboard tbody tr:nth-child(even) td, tbody tr.even td {
+		background: transparent;
+	}
+	
+	.error,
+	.alert,
+	.notice,
+	.success,
+	.info { padding: 0.8em; margin-bottom: 1em; border: 2px solid #ddd; }
+
+	.error, .alert { background: #fbe3e4; color: #8a1f11; border-color: #fbc2c4; }
+	.notice        { background: #fff6bf; color: #514721; border-color: #ffd324; }
+	.success       { background: #e6efc2; color: #264409; border-color: #c6d880; }
+	.info          { background: #d5edf8; color: #205791; border-color: #92cae4; }
+	.error a, .alert a { color: #8a1f11; }
+	.notice a          { color: #514721; }
+	.success a         { color: #264409; }
+	.info a            { color: #205791; }
+</style>
+<script>
+	$('#topbar').scrollSpy();
+	$('#topbar').dropdown();
+</script>
