--- a/app/views/paths/_enroll.html.erb
+++ b/app/views/paths/_enroll.html.erb
@@ -1,6 +1,6 @@
 <%= form_for current_user.enrollments.build(:path_id => @path.id) do |f| %>
 	<%= f.hidden_field :path_id %>
 	<div class="actions">
-		<%= f.submit "Take Path" %>
+		<%= f.submit "Take Path", :class=> "btn primary" %>
 	</div>
 <% end %>
