--- a/app/views/rewards/reward_form.html.erb
+++ b/app/views/rewards/reward_form.html.erb
@@ -2,23 +2,31 @@
 <%= form_for @reward do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<%= f.hidden_field :company_id, :value => @company.id %><br/>
-	<div class="field">
-		<%= f.label :name %><br/>
-		<%= f.text_field :name, :maxlength => 255, :size => 75 %>
+	<div class="field clearfix">
+		<%= f.label :name %>
+		<div class="input">
+			<%= f.text_field :name, :maxlength => 255, :size => 75 %>
+		</div>
 	</div>
-	<div class="field">
-		<%= f.label :description %><br/>
-		<%= f.text_field :description, :maxlength => 255, :size => 75 %>
+	<div class="field clearfix">
+		<%= f.label :description %>
+		<div class="input">
+			<%= f.text_field :description, :maxlength => 255, :size => 75 %>
+		</div>
 	</div>
-	<div class="field">
-		<%= f.label :image_url %><br/>
-		<%= f.text_field :image_url, :maxlength => 255, :size => 75 %>
+	<div class="field clearfix">
+		<%= f.label :image_url %>
+		<div class="input">
+			<%= f.text_field :image_url, :maxlength => 255, :size => 75 %>
+		</div>
 	</div>
-	<div class="field">
-		<%= f.label :points %><br/>
-		<%= f.text_field :points, :maxlength => 15, :size => 30 %>
+	<div class="field clearfix">
+		<%= f.label :points %>
+		<div class="input">
+			<%= f.text_field :points, :maxlength => 15, :size => 30 %>
+		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Save" %>
+		<%= f.submit "Save", :class => "btn primary" %>
 	</div>
 <% end %>
