--- a/app/views/rewards/show.html.erb
+++ b/app/views/rewards/show.html.erb
@@ -1,8 +1,14 @@
 <section class="reward">
-	<p><%= @reward.name %></p>
-	<p><%= @reward.description %></p>
-	<p><%= @reward.points %></p>
-	<p><%= @reward.image_url %></p>
-	<%= link_to "Edit", edit_reward_path(@reward)%>
-	<%= link_to "Purchase", review_reward_path(@reward)%>
+	<% if current_user.company_admin? %>
+	<section style="float: right">
+		<%= link_to "Edit", edit_reward_path(@reward), :class => "btn secondary" %>
+	</section>
+	<% end %>
+	<section>	
+		<h2><%= @reward.name %></h2>
+		<img src="<%= @reward.image_url %>" height="300" width="300">
+		<p><%= @reward.description %></p>
+		<p>Cost: <%= @reward.points %></p>
+	</section>
+	<%= link_to "Purchase", review_reward_path(@reward), :class => "btn primary" %>
 </section>
