Removed new user signup.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,6 +28,6 @@ $(document).ready(function() {
 	<h1>Project Moonlite</h1>
 	<h4>Know who knows what. And who doesn't.</h4>
 	<br>
-	<%= link_to "Sign up now!", signup_path, :class => "btn primary" %>
+	<%= link_to "Learn more!", about_path, :class => "btn primary" %>
 </section>
 <% end %>
