Added Simplecov, some additional tests and fixed the SQLite/Postgres issue on reports#details page.

--- a/app/views/reports/dashboard.html.erb
+++ b/app/views/reports/dashboard.html.erb
@@ -1,7 +1,12 @@
 <section id="dashboard">
+	<style>
+		.selected-time {
+			text-decoration:underline;
+		}
+	</style>
 	<h1>Dashboard</h1>
 	<div style="float:right;">
-		<% selected = "style='text-decoration:underline;'" %>
+		<% selected = "class='selected-time'" %>
 		<a href="/dashboard?time=7" <%= @time == 7 ? selected : "" %>>7 days</a> | 
 		<a href="/dashboard?time=30" <%= @time == 30 ? selected : "" %>>30 days</a> | 
 		<a href="/dashboard?time=90" <%= @time == 90 ? selected : "" %>>90 days</a>
