Added image_url to paths and users and default values for both to be displayed in show and index.

--- a/app/views/paths/_path.html.erb
+++ b/app/views/paths/_path.html.erb
@@ -1,4 +1,5 @@
 <tr>
+	<td style="vertical-align: middle;"><%= image_tag(path.path_pic, :size=>"70x70") %>
 	<td class="path">
 		<h3 class="name"><%= link_to path.name, path %></h3>
 		<p class="description"><%= path.description %></p>
