--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 </section>
 <section class="user_profile">
 	<h1>
-		<%= gravatar_for @user %>
+		<%= image_tag(@user.profile_pic, :size =>"50x50", :class => "profile_pic") %>
 		<%= @user.name %>
 	</h1>
 	<section>
