--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,6 +14,12 @@
 		</div>
 	</div>
 	<div class="field clearfix">
+		<%= f.label "Profile Picture URL" %>
+		<div class="input">
+			<%= f.text_field :image_url, :value => "Link to web hosted picture...", :onclick => "this.value='';" %>
+		</div>
+	</div>
+	<div class="field clearfix">
 		<%= f.label :password %>
 		<div class="input">
 			<%= f.password_field :password %>
