--- a/app/views/paths/marketplace.html.erb
+++ b/app/views/paths/marketplace.html.erb
@@ -65,7 +65,7 @@
 			<a href="/marketplace?search=communications"><span class="caption">communications</span><img class="thumbnail" src="/images/paths/communications.jpg" height="150" width="210"></a>
 		</li>
 		<li>
-			<a href="/marketplace?search=biotechnlogy"><span class="caption">biotechnlogy</span><img class="thumbnail" src="/images/paths/rsz_biotech.jpg" height="150" width="210"></a>
+			<a href="/marketplace?search=biotechnology"><span class="caption">biotechnology</span><img class="thumbnail" src="/images/paths/rsz_biotech.jpg" height="150" width="210"></a>
 		</li>
 		<li>
 			<a href="/marketplace?search=medicine"><span class="caption">medicine</span><img class="thumbnail" src="/images/paths/medicine.jpg" height="150" width="210"></a>
