New home/about pages, and added bootstrap scripts and css directly to local.

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,6 +1,6 @@
-<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-scrollspy.js"></script>
-<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-dropdown.js"></script>
-<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+<script src="/javascripts/bootstrap-scrollspy.js"></script>
+<script src="/javascripts/bootstrap-dropdown.js"></script>
+<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 <style>
 	#content {
 		padding-top: 75px;
