--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,12 @@
-<section>
-	<h1>What is Project Moonlite?</h1>
-	<p>How often have you heard someone say, "I want to learn a new language this year"? Unless you're still in college and you need the foreign language credits, that's almost always a doomed adventure. Most well intentioned goals end up forgotten, and when brought up, "not enough time in the day" is usually the weak excuse.</p>
-	<p>The usage of games like Halo and Angry Birds suggests that we have much more time than we realize, or at least care to admit. It's not lack of time that holds us back - it's a fundemental problem with the way we attempt to realize our ambitions. We start big, get excited and worry about the details later. Only when it's time to actually put nose to grindstone do we think twice. We don't know where to start or how long it will take us, and all the uncertainty is daunting. A few days on what seems like a never ending track and we ultimately give up and go back to playing Farmville.</p>
-	<p>We at Project Moonlite think we can help. We want to provide an online platform for people to incrementally attack personal and professional development goals. No one can drop everything and become a piano player in a week - but maybe on the train ride to work we could point you in the direction of some easy to read sources and give you a short quiz to solidify the start you've made. Don't worry - we'll keep track of how far you go, and we'll reward you with each incremental step along the way until you're practically Beethoven.</p>
-	<p>And as you progress, you can help those who are just getting started, or even define whole new paths for people to pursue in other areas. So you're really hot stuff in Ruby on Rails too, huh? Prove it.</p>
+<section id="about">
+	<style>
+		#about p {
+			font-size: 15px;
+		}
+	</style>
+	<h1>The cost of uncertainty...</h1>
+	<p>Companies of every size struggle with imperfect knowledge about what employees <strong>know</strong> and what they <strong>don't know</strong>. From new hires to seasoned veterans, its tough to keep everyone on the same page.</p>
+	<p>Moonlite gives you a crystal clear view of knowledge and skills across your company, while rewarding employees through a simple social game system for proving and growing their knowledge in the fields that are important to you.</p>
 	<br>
 	<%= link_to "Request an invite", invitation_path, :class => "btn primary" %>
 </section>
