--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,13 +42,16 @@
 	<% end %>
 	</section>
 <% else %>
-	<section style="float:left; margin-right: 100px;">
-		<img src="/images/logo.png" width="200" height="200"/>
+	<section style="float:left; margin-right: 60px;">
+		<img src="/images/logo.png" width="200" height="250"/>
 	</section>
 	<section>
-		<h1>Project Moonlite</h1>
-		<h4>Know who knows what. And who doesn't.</h4>
+		<h2>What do your employees know? What skills do they have?</h2>
+		<h3>What don't they know? What skills do they need?</h3>
+		<h4>... Are you sure?</h4>
 		<br>
-		<%= link_to "Learn more!", about_path, :class => "btn primary" %>
+		<p style="font-size: 16px;">Find out how Moonlite can drive training and professional development within your company so everyone is on the same page.</p>
+		<br>
+		<%= link_to "Learn more", about_path, :class => "btn primary" %>
 	</section>
 <% end %>
